FAC-231: new controlling properties added

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -37,3 +37,6 @@ app.dsl-parser.url=http://localhost:8080/extract
 
 # Logback
 log.file.path = logs/logback
+log.file.max-history= 30
+log.file.max-size=10MB
+log.file.total-size=100GB
