FAC-231: logstash-logback-encoder added to dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 			<artifactId>sentry-jdbc</artifactId>
 			<version>${sentry.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback-encoder.version}</version>
+        </dependency>
     </dependencies>
 
 	<build>
