FAC-286: Users module added and expert group adepter added to it

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>flickit-assessment-server</module>
 		<module>flickit-assessment-common</module>
         <module>flickit-advice-engine</module>
+        <module>flickit-assessment-users</module>
     </modules>
 
 	<properties>
