--- a/flickit-assessment-users/pom.xml
+++ b/flickit-assessment-users/pom.xml
@@ -16,5 +16,15 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.flickit</groupId>
+            <artifactId>flickit-assessment-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flickit</groupId>
+            <artifactId>flickit-assessment-kit</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
