FAC-286: Some changes in dependencies

--- a/flickit-assessment-server/pom.xml
+++ b/flickit-assessment-server/pom.xml
@@ -32,6 +32,10 @@
             <groupId>org.flickit</groupId>
             <artifactId>flickit-advice-engine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flickit</groupId>
+            <artifactId>flickit-assessment-users</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
