--- a/flickit-assessment-users/pom.xml
+++ b/flickit-assessment-users/pom.xml
@@ -2,29 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
+<modelVersion>4.0.0</modelVersion>
+<parent>
+    <groupId>org.flickit</groupId>
+    <artifactId>flickit-assessment</artifactId>
+    <version>${revision}</version>
+</parent>
+
+<artifactId>flickit-assessment-users</artifactId>
+
+<dependencies>
+    <dependency>
         <groupId>org.flickit</groupId>
-        <artifactId>flickit-assessment</artifactId>
-        <version>0.15.0-SNAPSHOT</version>
-    </parent>
-
-    <artifactId>flickit-assessment-users</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.flickit</groupId>
-            <artifactId>flickit-assessment-data</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.flickit</groupId>
-            <artifactId>flickit-assessment-kit</artifactId>
-        </dependency>
-    </dependencies>
+        <artifactId>flickit-assessment-data</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.flickit</groupId>
+        <artifactId>flickit-assessment-common</artifactId>
+    </dependency>
+</dependencies>
 
 </project>
+
