Activate 'tag-and-release' for branches starts with 'releases'
(cherry picked from commit a98c908a0f4e4cce9a7701b33a2b247f3b7d4add)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -177,7 +177,8 @@ jobs:
     needs: [sonar]
     name: tag and release
     runs-on: ubuntu-latest
-    if: ${{ ((github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true) &&
+    if: ${{ ((github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, '/refs/heads/releases'))) ||
+      github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true) &&
       !contains( needs.sonar.outputs.project_version , 'SNAPSHOT') }}
 
     permissions:
