--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<sentry.version>7.3.0</sentry.version>
 		<archunit.version>1.1.0</archunit.version>
         <minio.version>8.5.7</minio.version>
+		<logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
@@ -157,6 +158,11 @@
 			<groupId>io.sentry</groupId>
 			<artifactId>sentry-jdbc</artifactId>
 			<version>${sentry.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>${logstash-logback-encoder.version}</version>
 		</dependency>
 	</dependencies>
 
