--- a/flickit-assessment-users/pom.xml
+++ b/flickit-assessment-users/pom.xml
@@ -20,6 +20,10 @@
         <groupId>org.flickit</groupId>
         <artifactId>flickit-assessment-common</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.retry</groupId>
+        <artifactId>spring-retry</artifactId>
+    </dependency>
 </dependencies>
 
 </project>
