--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -6,7 +6,13 @@ spring.datasource.username=flickit
 spring.datasource.password=flickit
 
 # Actuator
+management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
+
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.group.liveness.include=livenessState
+management.endpoint.health.group.readiness.include=readinessState,db
+
 
 app.flickit-platform.rest.base-url=https://test.flickit.org/
 
