FAC-209: Create TaskExecutorProps

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -40,7 +40,7 @@ app.minio.init-buckets=false
 
 # dsl parser
 app.dsl-parser.url=http://localhost:8080/extract
-
+app.spec.host=https://test.flickit.org
 # Spring Mail
 spring.mail.username=XXX
 spring.mail.properties.mail.smtp.starttls.required=true
