--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -50,8 +50,10 @@ spring.mail.port=587
 spring.mail.password=XXX
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 #spring.mail.properties.mail.smtp.ssl.trust=*
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
 
