Add validateSelf to GetKitDownloadLinkUseCase param constructor

--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ management.endpoint.health.group.liveness.include=livenessState
 management.endpoint.health.group.readiness.include=readinessState,db
 
 
-app.flickit-platform.rest.base-url=https://test.flickit.org/
+app.flickit-platform.rest.base-url=https://app.test.flickit.org/
 
 # minio local
 app.minio.url=http://127.0.0.1:9000
