move urls and usernames to flickit-platform-dev

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ env:
   SPRING_DATASOURCE_PASSWORD: changeme
   SONAR_PROJECT_KEY: flickit-assessment-core
   REGISTRY: ghcr.io
-  IMAGE_NAME: flickit-platform/flickit-assessment
+  IMAGE_NAME: flickit-platform-dev/flickit-assessment
   JIB_OPT: -Djib.httpTimeout=240000 -Dmaven.test.skip=true
   JIB_CMD: clean install jib:build
 
@@ -148,7 +148,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: flickit-platform
+          username: flickit-platform-dev
           password: ${{ secrets.GH_PACKAGES_TOKEN }}
 
       - name: Set up JDK 17
@@ -215,7 +215,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: flickit-platform
+          username: flickit-platform-dev
           password: ${{ secrets.GH_PACKAGES_TOKEN }}
 
       - name: Set up JDK 17
