--- a/pom.xml
+++ b/pom.xml
@@ -191,12 +191,12 @@
 						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
 						<labels>
 							<org.opencontainers.image.source>
-								https://github.com/flickit-platform/flickit-assessment
+								https://github.com/flickit-platform-dev/flickit-assessment
 							</org.opencontainers.image.source>
 						</labels>
 					</container>
 					<from>
-						<image>ghcr.io/flickit-platform/jdk:17.0.7</image>
+						<image>ghcr.io/flickit-platform-dev/jdk:17.0.7</image>
 					</from>
 				</configuration>
 			</plugin>
