--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,6 +52,9 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
+    outputs:
+      project_version: ${{ steps.project.outputs.version }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -65,6 +68,16 @@ jobs:
       - name: Run Tests
         run: mvn test
 
+      - name: Extract Maven project version
+        run: echo version=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec) >> $GITHUB_OUTPUT
+        id: project
+
+      - name: Check output
+        env:
+          RELEASE_VERSION: ${{ steps.project.outputs.version }}
+        run: |
+          echo $RELEASE_VERSION
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
@@ -73,6 +86,7 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
   sonar:
+    if: false
     needs: [test]
     runs-on: ubuntu-latest
 
@@ -126,7 +140,7 @@ jobs:
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
 
   build-and-push-latest-image:
-    needs: [sonar]
+    needs: [test]
     name: deploy latest image
     runs-on: ubuntu-latest
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
@@ -174,12 +188,12 @@ jobs:
           DARKUBE_APP_ID: ${{ secrets.ASSESSMENT_CORE_APP_ID_STAGING }}
 
   tag-and-release:
-    needs: [sonar]
+    needs: [test]
     name: tag and release
     runs-on: ubuntu-latest
     if: ${{ ((github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, '/refs/heads/releases'))) ||
       github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true) &&
-      !contains( needs.sonar.outputs.project_version , 'SNAPSHOT') }}
+      !contains( needs.test.outputs.project_version , 'SNAPSHOT') }}
 
     permissions:
       contents: write
@@ -187,8 +201,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ncipollo/release-action@v1
         with:
-          tag: v${{ needs.sonar.outputs.project_version }}
-          name: Release ${{ needs.sonar.outputs.project_version }}
+          tag: v${{ needs.test.outputs.project_version }}
+          name: Release ${{ needs.test.outputs.project_version }}
           makeLatest: true
 
   build-and-push-image:
