Fix considering 'releases-*' branches in releasing jobs

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'main'
+      - 'releases-*'
   pull_request:
     branches:
       - '*'
@@ -191,7 +192,7 @@ jobs:
     needs: [test]
     name: tag and release
     runs-on: ubuntu-latest
-    if: ${{ ((github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, '/refs/heads/releases'))) ||
+    if: ${{ ((github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/releases-'))) ||
       github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true) &&
       !contains( needs.test.outputs.project_version , 'SNAPSHOT') }}
 
