--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -43,15 +43,14 @@ app.dsl-parser.url=http://localhost:8080/extract
 app.spec.host=https://app.test.flickit.org
 
 # Spring Mail
-spring.mail.username=XXX
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.password=XXX
+spring.mail.username=admin@flickit.org
+spring.mail.host=mail.flickit.org
+spring.mail.port=465
+spring.mail.password=R#BD.InHha2z^$=$#)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
-#spring.mail.properties.mail.smtp.ssl.trust=*
 
 
