--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </modules>
 
 	<properties>
-		<revision>0.18.0</revision>
+		<revision>0.19.0-SNAPSHOT</revision>
 
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.6</spring-boot.version>
