--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,6 @@ env:
   IMAGE_NAME: flickit-platform-dev/flickit-assessment
   JIB_OPT: -Djib.httpTimeout=240000 -Dmaven.test.skip=true
   JIB_CMD: clean install jib:build
-  GITHUB_SHA7: ${GITHUB_SHA:0:7}
 
 jobs:
   build:
@@ -173,8 +172,18 @@ jobs:
           java-version: 17
           distribution: adopt
 
+      - name: Extract GitHub SHA
+        run: echo sha=${GITHUB_SHA:0:7} >> $GITHUB_OUTPUT
+        id: github_sha7
+
+      - name: Check output
+        env:
+          GITHUB_SHA_7: ${{ steps.github_sha7.outputs.sha }}
+        run: |
+          echo $GITHUB_SHA_7
+
       - name: Build and push image
-        run: mvn ${{ env.JIB_OPT }} -Djib.to.image="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.GITHUB_SHA7 }}" ${{ env.JIB_CMD }}
+        run: mvn ${{ env.JIB_OPT }} -Djib.to.image="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.github_sha7.outputs.sha }}" ${{ env.JIB_CMD }}
 
 #  darkube-deploy-latest:
 #    needs: [build-and-push-latest-image]
