--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -24,6 +24,7 @@ app.minio.access-key=minioadmin
 app.minio.access-secret=minioadmin
 app.minio.bucket-names.dsl=dsl
 app.minio.bucket-names.avatar=avatar
+app.minio.bucket-names.attachment=attachment
 app.minio.secure=false
 app.minio.init-buckets=false
 
